<resources>
    <string name="app_name">MultyWork</string>
    <string name="sign_in_question">Чи маєте ви ID запрошення?</string>
    <string name="to_start_button">Розпочати</string>
    <string name="logo_description">Off zmi</string>
    <string name="have_acc_button">В мене вже є аккаунт</string>
    <string name="enter_the_id_placeholder">Введіть ID ******</string>
    <string name="registration_title">Реєстрація</string>
    <string name="user_name_text">Введіть прізвище, ім\'я по-батькові</string>
    <string name="user_name_input">Іванов Іван Іванович</string>
    <string name="phone_number">Номер телефону</string>
    <string name="phone_number_example">+380671234567</string>
    <string name="email_text">Електронна пошта</string>
    <string name="user_email_input">name@gmail.com</string>
    <string name="password_text">Пароль</string>
    <string name="user_password_input">******</string>
    <string name="privacy_policy_button">Політика конфіденціальності</string>
    <string name="next_button">Далі</string>
    <string name="login_title">Вхід</string>
    <string name="login_user_password_text">Пароль</string>
    <string name="forgot_password_button">Забули пароль?</string>
    <string name="registration_button">Реєстрація</string>
    <string name="enter_the_email_input">Введіть Ваш email…</string>
    <string name="enter_the_password_input">Введіть Ваш пароль…</string>
    <string name="entrance_button">Вхід</string>
    <string name="entrance_dia_button">Вхід через Дія</string>
    <string name="pass_reset">Скидання пароля</string>
    <string name="pass_reset_instructions">Введіть ваш email і ми відправимо вам інструкції як скинути ваш пароль.</string>
    <string name="confirm">Підтвердити</string>
    <string name="cancel">Відмінити</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="text_label_publishes">Публікації</string>
    <string name="text_label_request">Запрос</string>
    <string name="label_request">Запросити друга</string>
    <string name="text_label_add">Додати</string>
    <string name="label_add">Додати новину</string>
    <string name="text_label_profile">Профіль</string>
    <string name="text_label_info">Інфо</string>
    <string name="request_title">Як це працює?</string>
    <string name="request_instructions">Надішліть посилання другу або відскануйте QR код</string>
    <string name="add_news_title">Додати новину</string>
    <string name="news_name">Назва новини</string>
    <string name="news_name_hint">Введіть назву новини</string>
    <string name="news_text_hint">Введіть опис новини</string>
    <string name="news_date">Дата та час</string>
    <string name="date_time_hint">Додайте дату та час</string>
    <string name="add_image_cover_text">Додайте фото обкладинки</string>
    <string name="choose_category_text">Виберіть категорію</string>
    <string name="news_text">Новина</string>
    <string name="qr_code_description">QR code</string>
    <string name="copy_to_buffer">Cкопіювати посилання в буфер обміну</string>
    <string name="choose_photo">Вибрати фото</string>
    <string name="show_сategory_menu">Показати категорії</string>
    <string name="FAQ">FAQ</string>
    <string name="write_to_us">Написати нам</string>
    <string name="edit_profile">Редагувати профіль</string>
    <string name="my_cabinet">Мій кабінет</string>
    <string name="likes">Лайки</string>
    <string name="direct">Повідомлення</string>
    <string name="my_posts">Мої публікації</string>
    <string name="saved_posts">Збереженні публікації</string>
    <string name="go_to_the_site">Перейти на сайт додатку</string>
    <string name="choose_category_description">Choose category</string>
    <string name="fab_category">Виберіть категорію новин</string>
    <string name="messages">Повідомлення</string>
    <string name="notifications">Оповіщення</string>
    <string name="choose_city">Оберіть місто для модерації новини</string>
    <string name="enter_the_street">Введіть назву вулиці</string>
    <string name="street_name">Назва вулиці</string>
    <string name="home_number">Номер будинку</string>
    <string name="enter_the_home_number">Введіть номер будинку</string>
    <string name="publish">Опублікувати</string>
    <string name="add_photo">Додайте фото події</string>
    <string name="website_url">https:/www.offzmi.com</string>
    <string name="privacy_policy_url">https://offzmi.com/politika-konfidenciynosti-html</string>
    <string name="welcome">Ласкаво просимо до OFFЗМІ</string>
    <string name="send">Відправити</string>
    <string name="read">Читати</string>
    <string name="BASE_URL">https://api.airtable.com</string>
    <string name="TOKEN">patLjaA9PpxNgSK6z.0131f87279f385a422f27dd6ae2a5062c23e471e8f8e171999731760a74dfbbe</string>
    <string name="want_to_cre">Want to create\nsome wonderful in our  multiverse?</string>
    <string name="welcome_ilo">Welcome, Ilon</string>
    <string name="to_create_a">To create\na grand\nproject</string>
    <string name="be_a_part_o">Be a part\nof grand\nproject</string>
    <string name="i_light_the">I light\nthe stars\nin the sky</string>
    <string name="great_">Great!</string>
    <string name="choose_empl">Choose employee skills\nfor the project</string>
    <string name="d_design">3D Design</string>
    <string name="statisctics_btn">Statisctics</string>
    <string name="motion_btn">Motion Design</string>
    <string name="photo_btn">Photograph</string>
    <string name="web_development_btn">Web Development</string>
    <string name="computer_architect_btn">Computer Architect</string>
    <string name="graphic_design_btn">Graphic Design</string>
    <string name="prod_btn">Product Manager</string>
    <string name="team_leading_btn">Team Leading</string>
    <string name="data_cleaning_btn">Data Cleaning</string>
    <string name="dubbing_actor_btn">Dubbing Actor</string>
    <string name="prod_mark_btn">Product Marketing</string>
    <string name="email_market_btn">Email Market</string>
    <string name="texture_drawing_btn">Texture Drawing</string>
    <string name="data_btn">Data Analytics</string>
    <string name="content_creation_btn">Content Creation</string>
    <string name="brand_manager_btn">Brand Manager</string>
    <string name="qa_engineering_btn">QA Engineering</string>
    <string name="art_btn">Art</string>
    <string name="content_btn">Content Creation</string>
    <string name="target_btn">Targeting</string>
    <string name="market_btn">Marketing</string>
    <string name="finance_btn">Finance</string>
    <string name="software_developer_btn">Software Developer</string>
    <string name="ui_btn">UX/UI Design</string>
    <string name="video_make_btn">Video Making</string>
    <string name="data_scie_btn">Data Science</string>
    <string name="management_btn">Management</string>
    <string name="smm_btn">SMM</string>
    <string name="copywriting_btn">Copywriting</string>
    <string name="project_manager_btn">Project Manager</string>
    <string name="add_some_in">Add some information\nabout your project</string>
    <string name="name">Name</string>
    <string name="type">Type</string>
    <string name="budget">Budget</string>
    <string name="description">Description</string>
    <string name="next">Next</string>
    <string name="well_done">Well done!</string>
    <string name="and_finally">And finally!</string>
    <string name="add_project_cover_and_nlinks_to_social_media">Add project cover and\nlinks to social media</string>
    <string name="choose_a_photo">Choose a photo</string>

</resources>
