<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp">

    <TextView
        android:id="@+id/login_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:text="@string/login_title"
        android:textColor="@color/black"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/login_email_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/email_text"
        android:textColor="@color/black"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/login_title" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/login_email_placeholder"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:hint="@string/enter_the_email_input"
        app:layout_constraintTop_toBottomOf="@id/login_email_text">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/login_email_placeholder_edit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="text" />
    </com.google.android.material.textfield.TextInputLayout>

    <TextView
        android:id="@+id/login_password_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/login_user_password_text"
        android:textColor="@color/black"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/login_email_placeholder" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/login_password_placeholder"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:hint="@string/enter_the_password_input"
        app:layout_constraintTop_toBottomOf="@id/login_password_text">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/login_password_placeholder_edit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="numberPassword" />
    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/entrance_button"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        app:icon="@drawable/ic_baseline_login_24"
        android:text="@string/entrance_button"
        android:textAllCaps="false"
        app:layout_constraintEnd_toEndOf="@id/login_password_placeholder"
        app:layout_constraintStart_toStartOf="@id/login_password_placeholder"
        app:layout_constraintTop_toBottomOf="@id/login_password_placeholder" />

    <Button
        android:id="@+id/entrance_dia_button"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="30dp"
        android:text="@string/entrance_dia_button"
        android:textAllCaps="false"
        app:layout_constraintEnd_toEndOf="@id/entrance_button"
        app:layout_constraintStart_toStartOf="@id/entrance_button"
        app:layout_constraintTop_toBottomOf="@id/entrance_button" />

    <Button
        android:id="@+id/forgot_pass_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:text="@string/forgot_password_button"
        app:icon="@drawable/ic_baseline_question_mark_24"
        android:textAllCaps="false"
        app:layout_constraintStart_toStartOf="@id/entrance_dia_button"
        app:layout_constraintTop_toBottomOf="@id/entrance_dia_button" />

    <Button
        android:id="@+id/registration_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:icon="@drawable/ic_baseline_person_add_alt_24"
        android:layout_marginEnd="10dp"
        android:text="@string/registration_button"
        android:textAllCaps="false"
        app:layout_constraintEnd_toEndOf="@id/entrance_dia_button"
        app:layout_constraintTop_toBottomOf="@id/entrance_dia_button" />


</androidx.constraintlayout.widget.ConstraintLayout>