<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/nav_graph"
    app:startDestination="@id/bottom_nav_publishesFragment">

    <fragment
        android:id="@+id/bottom_nav_publishesFragment"
        android:name="com.example.offzmi.bottom_nav_publishesFragment"
        android:label="@string/text_label_publishes"
        tools:layout="@layout/fragment_bottom_nav_publishes" />
    <fragment
        android:id="@+id/bottom_nav_addFragment"
        android:name="com.example.offzmi.bottom_nav_addFragment"
        android:label="@string/label_add"
        tools:layout="@layout/fragment_bottom_nav_add" />
    <fragment
        android:id="@+id/bottom_nav_profileFragment"
        android:name="com.example.offzmi.bottom_nav_profileFragment"
        android:label="@string/text_label_profile"
        tools:layout="@layout/fragment_bottom_nav_profile" />
    <fragment
        android:id="@+id/bottom_nav_requestFragment"
        android:name="com.example.offzmi.bottom_nav_requestFragment"
        android:label="@string/label_request"
        tools:layout="@layout/fragment_bottom_nav_request" />
    <fragment
        android:id="@+id/InfoFragment"
        android:name="com.example.offzmi.InfoFragment"
        android:label="@string/text_label_info"
        tools:layout="@layout/fragment_bottom_nav_info" />
    <fragment
        android:id="@+id/sign_inFragment"
        android:name="com.example.offzmi.sign_inFragment"
        android:label="sign_inFragment"
        tools:layout="@layout/fragment_sign_in"/>
    <fragment
        android:id="@+id/registrationFragment"
        android:name="com.example.offzmi.registrationFragment"
        android:label="registrationFragment"
        tools:layout="@layout/fragment_registration"/>
    <fragment
        android:id="@+id/loginFragment"
        android:name="com.example.offzmi.loginFragment"
        android:label="loginFragment"
        tools:layout="@layout/fragment_login"/>
    <fragment
        android:id="@+id/password_resetFragment"
        android:name="com.example.offzmi.password_resetFragment"
        android:label="password_resetFragment"
        tools:layout="@layout/fragment_password_reset"/>
</navigation>