<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp">

    <TextView
        android:id="@+id/pass_reset_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:text="@string/pass_reset"
        android:textColor="@color/black"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/pass_reset_instructions"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/pass_reset_instructions"
        android:textColor="@color/black"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/pass_reset_title" />

    <TextView
        android:id="@+id/pass_reset_email_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/email_text"
        android:textColor="@color/black"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/pass_reset_instructions" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/pass_reset_email_placeholder"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:hint="@string/enter_the_email_input"
        app:layout_constraintTop_toBottomOf="@id/pass_reset_email_text">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/pass_reset_email_placeholder_edit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="text" />
    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/confirm_button"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:text="@string/confirm"
        app:icon="@drawable/ic_baseline_done_24"
        android:textAllCaps="false"
        app:layout_constraintEnd_toEndOf="@id/pass_reset_email_placeholder"
        app:layout_constraintStart_toStartOf="@id/pass_reset_email_placeholder"
        app:layout_constraintTop_toBottomOf="@id/pass_reset_email_placeholder" />

    <Button
        android:id="@+id/cancel_button"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="30dp"
        android:text="@string/cancel"
        app:icon="@drawable/ic_baseline_cancel_24"
        android:textAllCaps="false"
        app:layout_constraintEnd_toEndOf="@id/confirm_button"
        app:layout_constraintStart_toStartOf="@id/confirm_button"
        app:layout_constraintTop_toBottomOf="@id/confirm_button" />

</androidx.constraintlayout.widget.ConstraintLayout>